--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy":"react-scripts build && aws s3 sync build/ s3://mern-social-media-app-react"
   },
   "eslintConfig": {
     "extends": [
