--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
@@ -11,13 +11,15 @@
         "mongoose": "^6.8.2",
         "morgan": "^1.10.0",
         "multer": "^1.4.4",
-        "multer-gridfs-storage": "^5.0.2"
+        "multer-gridfs-storage": "^5.0.2",
+        "serverless-http": "^3.1.1",
+        "swagger-autogen": "^2.22.0",
+        "swagger-ui-express": "^4.6.0"
     },
     "name": "server",
     "version": "1.0.0",
     "main": "index.js",
     "type": "module",
-    "devDependencies": {},
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
