--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.8.2",
         "morgan": "^1.10.0",
+        "msnodesqlv8": "^4.1.0",
         "multer": "^1.4.4",
         "multer-gridfs-storage": "^5.0.2",
         "serverless-http": "^3.1.1",
