--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "node app.js",
+        "dev": "nodemon app.js"
     },
     "keywords": [],
     "author": "",
