--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,7 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "node app.js",
-        "dev": "nodemon app.js"
+        "dev": "nodemon index.js"
     },
     "keywords": [],
     "author": "",
